# 2_semestr

./: CMakeLists.txt  README.md  dot_out.dot  dott.txt  lang_back_end.cpp  lang_back_end.h  lang_middle_end.cpp  lang_reader.cpp  lang_tokenization.cpp  sheet.cpp  test_lib.out  tree_dot.cpp  tree_header.h  tree_output
Hack/ME/: ME.LST  ME.MAP
Hack/MY/: HACK_DEF.COM  PASS.COM
_printf/: -fpic  CMakeLists.txt  comp_base  copy_printf.s  printf.asm  printf.lst  printf.s  test  test.cpp
_printf/CMake/: CMakeCache.txt  Makefile  cmake_install.cmake
_printf/draft/1/: print_str.s
_printf/tmp/: CMakeCache.txt  Makefile  cmake_install.cmake  main
compiler/: CMakeLists.txt  Readme(optimization).md  Readme.md  TMPTMPTMP  elf.out  lang_back_end.cpp  lang_back_end0.cpp  lang_back_end_buffer.cpp  lang_commands.h  lang_front_end.cpp  lang_front_end_back.cpp  lang_header.h  lang_main.cpp  lang_output  lang_which_is.cpp  test.out  time_test  tree.cpp
compiler/input/: lang_input  lang_input0  lang_input1  lang_input10  lang_input11  lang_input_fact  lang_input_fact_final  lang_input_fact_test  lang_input_square  lang_input_square1  lang_input_square_test  lang_input_square_test2  lang_input_square_test3  lang_input_test
compiler/test/: a.out  printf (2).s  scanf.out  scanf.s  test.asm  test.out  test.s  test1.s  test_fin.out  test_fin.s  test_sqrt.out  test_sqrt.s
dos_projects/frame/: frame.asm  macro.asm
dos_projects/funcs/: 1memset.asm  2_memcpy.asm  3_memchr.asm  4_memcmp.asm  5_strlen  6_strcpy.asm  7_strchr.asm  8_strrchr.asm  9_strstr.asm
hack/: Readme.md
hack/ME/: ME.ASM  ME1.COM  password.txt
hack/MY/: PASS.ASM  PASS.LST  TEST_PAS.txt  password.txt
optimization_hash_table/: CMakeLists.txt  README.md  for_opt.cpp  hash-table.cpp  hash-table_header.h  hash-table_main.cpp  hash_funcs.cpp  iinp  innp.txt  inpp.txt  input.txt  new_list.cpp  new_list_header.h  output.csv  output1.txt  outt.csv  outt.txt  reader.cpp  search.asm  tabls.ods  timer.h  tmptnptnp.txt
